--- a/package.json
+++ b/package.json
@@ -17,11 +17,21 @@
     "publish": true
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "hono": "4.8.2",
     "isbot": "5.1.26",
-    "react": "19.0.0",
+    "lucide-react": "^0.545.0",
+    "react": "^19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "7.6.3"
+    "react-router": "7.6.3",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
@@ -32,6 +42,7 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "tailwindcss": "4.1.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.8.3",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "5.1.4",
